# devpilot

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
claude-plugin/: plugin.json
claude-plugin/hooks/: detect-devserver-pain.mjs
claude-plugin/skills/devpilot/: SKILL.md
docs/superpowers/plans/: 2026-03-26-devpilot-implementation.md
docs/superpowers/specs/: 2026-03-26-devpilot-design.md
src/devpilot/: __init__.py  cli.py  config.py  mcp_server.py  supervisor.py
src/devpilot/frameworks/: registry.py
src/devpilot/health/: checker.py  verifier.py
src/devpilot/process/: attacher.py  manager.py  scanner.py
src/devpilot/recovery/: strategy.py
src/devpilot/state/: store.py
src/devpilot/watch/: file_watcher.py  reload.py
tests/: conftest.py  test_attacher.py  test_changed.py  test_cli.py  test_config.py  test_file_watcher.py  test_frameworks.py  test_health_checker.py  test_process_manager.py  test_recovery.py  test_reload.py  test_scanner.py  test_state_store.py  test_supervisor.py  test_verifier.py
tests/fixtures/fastapi_app/: app.py
