[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devpilot"
version = "0.1.0"
description = "Dev server supervisor for AI coders"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "watchdog>=4.0",
    "httpx>=0.27",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "filelock>=3.13",
]

[project.scripts]
devpilot = "devpilot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
